Beginning to add jQuery

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Web Dev II: jQuery</title>
-
+<script src="jquery-3.2.1.js"></script>
 <style type="text/css">
     body {
 		margin: 0px;
@@ -230,7 +230,7 @@
     <div id="footer">
         <p>&copy; 2008. All Rights Reserved. Design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
     </div>
-
+<script src="script.js"></script>
 </body>
 </html>
 
